Revert "Fixes non-editable column and selection visibility in editor"
This reverts commit 5460f5ec736f479795d3301acb73d62040c99311.

--- a/WebContent/VAADIN/themes/base/grid/grid.scss
+++ b/WebContent/VAADIN/themes/base/grid/grid.scss
@@ -189,14 +189,6 @@ $v-grid-details-border-bottom-stripe: 1px solid darken($v-grid-row-background-co
   }
 
   // Rows
-  .#{$primaryStyleName}-row.editing {
-    > td {
-      background: $v-grid-editor-background-color;
-    }
-    &.#{$primaryStyleName}-row-selected > .v-grid-cell {
-      border-left: $v-grid-border;
-    }
-  }	
 
   .#{$primaryStyleName}-row > td,
   .#{$primaryStyleName}-editor-cells > div {
@@ -356,10 +348,6 @@ $v-grid-details-border-bottom-stripe: 1px solid darken($v-grid-row-background-co
       @include box-sizing(border-box);
       vertical-align: middle;
       background: $v-grid-editor-background-color;
-
-      &.not-editable {
-        visibility: hidden;
-      }
 
       &:first-child {
         border-left: none;
